Archive2/41/20433682683693/output
main.cpp:6:22: error: expected ')' before '*' token
     Autocast(Tcl_Obj * obj) : obj(obj) { }
                      ^
main.cpp:15:5: error: 'Tcl_Obj' does not name a type
     Tcl_Obj * obj;
     ^
main.cpp: In member function 'Autocast::operator T() const':
main.cpp:11:17: error: 'obj' was not declared in this scope
         tcl_get(obj, result);
                 ^
main.cpp: At global scope:
main.cpp:19:14: error: variable or field 'tcl_get' declared void
 void tcl_get(Tcl_Obj*, bool);
              ^
main.cpp:19:14: error: 'Tcl_Obj' was not declared in this scope
main.cpp:19:22: error: expected primary-expression before ',' token
 void tcl_get(Tcl_Obj*, bool);
                      ^
main.cpp:19:24: error: expected primary-expression before 'bool'
 void tcl_get(Tcl_Obj*, bool);
                        ^
main.cpp:20:14: error: variable or field 'tcl_get' declared void
 void tcl_get(Tcl_Obj*, double);
              ^
main.cpp:20:14: error: 'Tcl_Obj' was not declared in this scope
main.cpp:20:22: error: expected primary-expression before ',' token
 void tcl_get(Tcl_Obj*, double);
                      ^
main.cpp:20:24: error: expected primary-expression before 'double'
 void tcl_get(Tcl_Obj*, double);
                        ^
main.cpp:21:14: error: variable or field 'tcl_get' declared void
 void tcl_get(Tcl_Obj*, int);
              ^
main.cpp:21:14: error: 'Tcl_Obj' was not declared in this scope
main.cpp:21:22: error: expected primary-expression before ',' token
 void tcl_get(Tcl_Obj*, int);
                      ^
main.cpp:21:24: error: expected primary-expression before 'int'
 void tcl_get(Tcl_Obj*, int);
                        ^
